[gd_scene load_steps=2 format=3 uid="uid://bkypqtfvrep88"]

[ext_resource type="Script" path="res://other/gd/Server.gd" id="1_ell3o"]

[node name="Setting_server" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ell3o")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="BoxContainer" type="BoxContainer" parent="Margin"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
vertical = true

[node name="Input_type_server" type="LineEdit" parent="Margin/BoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Введите тип сервера"

[node name="Input_port_server" type="LineEdit" parent="Margin/BoxContainer"]
layout_mode = 2

[node name="Input_max_connected_client" type="HSlider" parent="Margin/BoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
min_value = 5.0
max_value = 500.0
step = 5.0
value = 5.0

[node name="Max_connected_client" type="Label" parent="Margin/BoxContainer/Input_max_connected_client"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Create_server" type="Button" parent="Margin/BoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Запустить сервер"

[node name="Close_server" type="Button" parent="Margin/BoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Закрыть сервер"

[connection signal="mouse_exited" from="Margin/BoxContainer/Input_max_connected_client" to="." method="_set_max_conneted_client_in_server"]
[connection signal="pressed" from="Margin/BoxContainer/Create_server" to="." method="_create_server"]
[connection signal="pressed" from="Margin/BoxContainer/Close_server" to="." method="_close_server"]
